[package]
name = "hotkey"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
] }
